[GOJHW-6]: add linter
